# Timetable

./: .dockerignore  .env  .gitignore  .readthedocs.yaml  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  __init__.py  a.py  add_data.py  app.py  database.py  delete_data.py  fetch_data.py  generate_timetable.py  index.py  insert_data.py  mysql_connect.py  mysql_connector.py  pyproject.toml  relations.py  requirements.txt  retrieve_data.py  setup.py  show_data.py  timetable.py  triggers.py  typehints.py  update_data.py  views.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql.yml  db-access.yml  test-app.yml
data/: sections.csv
templates/: 404.html  about.html  add_blocks.html  add_campus.html  add_classes.html  add_schools.html  blocks.html  building.html  campus.html  campuses.html  course.html  degree.html  department.html  faculty.html  failed.html  index.html  layout.html  login.html  programme.html  programme_campus.html  school.html  section.html  stream.html  timetable.html  update_timetable.html  year.html
