[project]
name = "sastra-webapp"
version = "0.9.0a0"
description = "SASTRA Timetable Web Application"
requires-python = ">=3.10"

dependencies = [
    "Flask==3.1.1",
    "Jinja2==3.1.6",
    "PyMySQL==1.1.1",
    "mypy==1.16.1"
]

[tool.flask]
app = "app:app"
env = "production"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
